# matchedpotato

./: .dockerignore  Dockerfile  fly.toml  generate-api.sh  index.html
.github/workflows/: main.yml
assets/: index.b2ff593d.js  index.df4d311c.css
backend/: .gitignore  Makefile  pyproject.toml
backend/matchedpotato/: api.py  colours.py  matcher.py  vinted.py
frontend/: .eslintrc.cjs  .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs
frontend/src/: App.tsx  Filters.tsx  Loading.tsx  Logo.tsx  Onboarding.tsx  PixelChooser.tsx  Shop.tsx  api.ts  data.ts  index.css  main.tsx  store.ts  utils.ts
frontend/src/client/apis/: DefaultApi.ts
frontend/src/client/models/: Gender.ts  ItemsResult.ts  RequestIdResult.ts  SearchRequest.ts  Size.ts  VintedResult.ts  index.ts
nginx/: nginx.dev.conf
