[tool.poetry]
name = "matchedpotato"
version = "0.1.0"
description = ""
authors = ["Jonathan Roitgrund <jroitgrund@gmail.com>"]
packages = [{include = "matchedpotato"}]

[tool.poetry.dependencies]
python = ">=3.10.7,<3.11"
fastapi = "^0.85.1"
colour-science = "^0.4.1"
beautifulsoup4 = "^4.11.1"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.10.0"
types-requests = "^2.28.11.2"
types-beautifulsoup4 = "^4.11.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"